<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/send_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/stop_btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/po_ni"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/stop_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/prekini"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/receive_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:freezesText="true"
        android:gravity="center_horizontal"
        android:scrollbars="vertical"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/timeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/receive_text"
        android:layout_marginStart="1dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="1dp"
        android:layout_toStartOf="@+id/plusTimeBtn"
        android:layout_toEndOf="@+id/minusTimeBtn"
        android:gravity="center_horizontal"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textSize="38dp" />

    <ImageButton
        android:id="@+id/plusTimeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/receive_text"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="80dp"
        app:srcCompat="@android:drawable/ic_media_ff" />

    <ImageButton
        android:id="@+id/minusTimeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/receive_text"
        android:layout_alignParentStart="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="35dp"
        app:srcCompat="@android:drawable/ic_media_rew" />

    <TextView
        android:id="@+id/frekTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/receive_text"
        android:layout_marginStart="1dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="1dp"
        android:layout_toStartOf="@+id/plusTimeBtn"
        android:layout_toEndOf="@+id/minusTimeBtn"
        android:gravity="center_horizontal"
        android:text="@string/_10"
        android:textAlignment="center"
        android:textSize="38dp" />

    <ImageButton
        android:id="@+id/plusFrekBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/receive_text"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="80dp"
        app:srcCompat="@android:drawable/ic_media_ff" />

    <ImageButton
        android:id="@+id/minusFrekBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/receive_text"
        android:layout_alignParentStart="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="130dp"
        app:srcCompat="@android:drawable/ic_media_rew" />

    <TextView
        android:id="@+id/impulsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/receive_text"
        android:layout_marginStart="1dp"
        android:layout_marginTop="225dp"
        android:layout_marginEnd="1dp"
        android:layout_toStartOf="@+id/plusTimeBtn"
        android:layout_toEndOf="@+id/minusTimeBtn"
        android:gravity="center_horizontal"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textSize="38dp" />

    <ImageButton
        android:id="@+id/plusImpulsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/receive_text"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="225dp"
        android:layout_marginEnd="80dp"
        app:srcCompat="@android:drawable/ic_media_ff" />

    <ImageButton
        android:id="@+id/minusImpulsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/receive_text"
        android:layout_alignParentStart="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="225dp"
        app:srcCompat="@android:drawable/ic_media_rew" />

    <TextView
        android:id="@+id/pauseTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/receive_text"
        android:layout_marginStart="1dp"
        android:layout_marginTop="325dp"
        android:layout_marginEnd="1dp"
        android:layout_toStartOf="@+id/plusTimeBtn"
        android:layout_toEndOf="@+id/minusTimeBtn"
        android:gravity="center_horizontal"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textSize="38dp" />

    <ImageButton
        android:id="@+id/plusPauseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/receive_text"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="325dp"
        android:layout_marginEnd="80dp"
        app:srcCompat="@android:drawable/ic_media_ff" />

    <ImageButton
        android:id="@+id/minusPauseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/receive_text"
        android:layout_alignParentStart="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="325dp"
        app:srcCompat="@android:drawable/ic_media_rew" />

    <TextView
        android:id="@+id/voltageTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/receive_text"
        android:layout_marginStart="1dp"
        android:layout_marginTop="425dp"
        android:layout_marginEnd="1dp"
        android:layout_toStartOf="@+id/plusTimeBtn"
        android:layout_toEndOf="@+id/minusTimeBtn"
        android:gravity="center_horizontal"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textSize="38dp" />

    <ImageButton
        android:id="@+id/plusVoltageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/receive_text"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="425dp"
        android:layout_marginEnd="80dp"
        app:srcCompat="@android:drawable/ic_media_ff" />

    <ImageButton
        android:id="@+id/minusVoltageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/receive_text"
        android:layout_alignParentStart="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="425dp"
        app:srcCompat="@android:drawable/ic_media_rew" />

    <TextView
        android:id="@+id/timeTitleTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/receive_text"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:gravity="center_horizontal"
        android:text="@string/vreme"
        android:textAlignment="center"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/FrekTitleTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/receive_text"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="-13dp"
        android:gravity="center_horizontal"
        android:text="@string/frekvencija"
        android:textAlignment="center"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/volatageTitleTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/receive_text"
        android:layout_marginTop="390dp"
        android:gravity="center_horizontal"
        android:text="@string/napon"
        android:textAlignment="center"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/pauseTitleTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/receive_text"
        android:layout_marginTop="290dp"
        android:gravity="center_horizontal"
        android:text="@string/pauza"
        android:textAlignment="center"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/impulsTitleTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/receive_text"
        android:layout_marginTop="195dp"
        android:gravity="center_horizontal"
        android:text="@string/impuls"
        android:textAlignment="center"
        android:textSize="20dp" />


</RelativeLayout>

